# ooxmlsdk

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.cargo/: config.toml
.github/workflows/: daily_sync_ooxmlsdk_data.yml
crates/ooxmlsdk/: Cargo.toml  build.rs
crates/ooxmlsdk-build/: Cargo.toml
crates/ooxmlsdk-build/benches/: serde_bench.rs
crates/ooxmlsdk-build/src/: error.rs  lib.rs  models.rs  utils.rs
crates/ooxmlsdk-build/src/generator/: context.rs  deserializer.rs  open_xml_part.rs  open_xml_schema.rs  serializer.rs  simple_type.rs  validator.rs
crates/ooxmlsdk-build/src/includes/: common.rs
examples/: read_write.rs
examples/read_docx/src/: main.rs
examples/read_pptx/src/: main.rs
examples/read_write/: Cargo.toml
examples/read_write/src/: main.rs
examples/read_write_xml/src/: main.rs
examples/read_xlsx/src/: main.rs
examples/write_docx/src/: main.rs
examples/write_pptx/src/: main.rs
examples/write_xlsx/src/: main.rs
scripts/: sync_ooxmlsdk_data.rs
src/: lib.rs
