[workspace]
resolver = "2"
members = ["crates/ooxmlsdk", "crates/ooxmlsdk-build", "examples/*"]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.73"
authors = ["KaiserY"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KaiserY/ooxmlsdk"
documentation = "https://docs.rs/ooxmlsdk"
description = "Open XML SDK for Rust"
keywords = ["xml", "office", "docx", "pptx", "xlsx"]
categories = ["parser-implementations"]
readme = "README.md"

[workspace.dependencies]
ooxmlsdk = { version = "0.3", path = "crates/ooxmlsdk", default-features = false }
ooxmlsdk-build = { version = "0.3", path = "crates/ooxmlsdk-build" }
quick-xml = "0.38"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.145"
quote = "1.0.42"
syn = "2.0.111"
prettyplease = "0.2.37"
proc-macro2 = "1.0.103"
heck = "0.5"
zip = { version = "6.0", default-features = false, features = ["deflate"] }
thiserror = "2.0"
criterion = "0.8"
