[workspace]
resolver = "3"
members = ["crates/ooxmlsdk", "crates/ooxmlsdk-build", "examples/*"]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.92"
authors = ["KaiserY", "sonicjhon1"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KaiserY/ooxmlsdk"
documentation = "https://docs.rs/ooxmlsdk"
description = "Open XML SDK for Rust"
keywords = ["xml", "office", "docx", "pptx", "xlsx"]
categories = ["parser-implementations"]
readme = "README.md"

[workspace.dependencies]
criterion = "0.8"
heck = "0.5"
ooxmlsdk = { version = "0.3", path = "crates/ooxmlsdk", default-features = false }
ooxmlsdk-build = { version = "0.3", path = "crates/ooxmlsdk-build" }
prettyplease = "0.2.37"
proc-macro2 = "1.0.103"
quick-xml = "0.38"
quote = "1.0.42"
rootcause = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.145"
syn = "2.0.111"
tempfile = "3.23"
thiserror = "2.0"
tracing = "0.1"
zip = { version = "7.0", default-features = false, features = ["deflate"] }

[workspace.lints.clippy]
needless_return = "allow"
