[package]
name = "ooxmlsdk-build"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = ["docx", "xlsx", "pptx", "office2007", "parts"]
schemas = []
parts = ["schemas", "dep:zip"]
validators = ["schemas"]
docx = []
xlsx = []
pptx = []
office2007 = []
office2010 = ["office2007"]
office2013 = ["office2010"]
office2016 = ["office2013"]
office2019 = ["office2016"]
office2021 = ["office2019"]
microsoft365 = []

[dependencies]
heck = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
quote = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "serde_bench"
harness = false
